# obs-kmsgrab

./: CMakeLists.txt  Dockerfile  README.md
src/: dmabuf.c  drmsend.c
